@@ -8,7 +8,7 @@ $EM_CONF[$_EXTKEY] = array(
     'title' => 'Debug generator and Devlog',
     'description' => 'This generates a PHP debug output file. And this is a sys_log and devLog data logger',
     'category' => 'misc',
-    'version' => '0.6.6',
+    'version' => '0.6.7',
     'state' => 'stable',
     'uploadfolder' => '',
     'createDirs' => '',
